[package]
name = "nrd-sys"
version = "0.1.0"
edition = "2021"
description = "Rust FFI for NVIDIA Realtime Denoiser"
categories = ["game-engines", "graphics", "rendering"]
keywords = ["game", "denoiser", "gamedev", "graphics", "vulkan"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dust-engine/nrd-sys"

[dependencies]

[build-dependencies]
sysreq = "0"
